force-app/main/default/objects/BigMachines__Quote__c/BigMachines__Quote__c.object-meta.xml
<CustomObject>
    <description>An Oracle CPQ Cloud quote object storing the proposal(s) and line items.</description>
    <label>Oracle Quote</label>
    <nameField>
        <label>Quote Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oracle Quotes and Orders</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>