force-app/main/default/objects/BigMachines__Quote__c/fields/BigMachines__Line_Items__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Line_Items__c</fullName>
    <label>Line Items</label>
    <summaryForeignKey>BigMachines__Quote_Product__c.BigMachines__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>