force-app/main/default/objects/BigMachines__Quote__c/fields/BigMachines__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>BigMachines_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>