force-app/main/default/objects/BigMachines__Quote__c/fields/BigMachines__Process_Sync__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Process_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Sync</label>
    <type>Checkbox</type>
</CustomField>