force-app/main/default/objects/BigMachines__Quote__c/fields/BigMachines__Status__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Status__c</fullName>
    <label>Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>