force-app/main/default/objects/BigMachines__Quote__c/fields/BigMachines__Total__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Total__c</fullName>
    <label>Total</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>