force-app/main/default/objects/BigMachines__Quote__c/fields/BigMachines__Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Total_Amount__c</fullName>
    <formula>IF(BigMachines__Amount__c &gt; 0, BigMachines__Amount__c,  BigMachines__Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>