force-app/main/default/objects/BigMachines__Quote__c/fields/BigMachines__Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Transaction_Id__c</fullName>
    <externalId>true</externalId>
    <label>Transaction Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>