force-app/main/default/objects/BigMachines__Quote__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>