force-app/main/default/objects/BigMachines__Quote__c/listViews/BigMachines__All.listView-meta.xml
<ListView>
    <fullName>BigMachines__All</fullName>
    <columns>NAME</columns>
    <columns>BigMachines__Description__c</columns>
    <columns>BigMachines__Account__c</columns>
    <columns>BigMachines__Opportunity__c</columns>
    <columns>BigMachines__Status__c</columns>
    <columns>BigMachines__Is_Primary__c</columns>
    <columns>BigMachines__Line_Items__c</columns>
    <columns>BigMachines__Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Quotes</label>
    <language>en_US</language>
</ListView>