force-app/main/default/objects/BigMachines__Quote__c/listViews/BigMachines__Orphan_Quotes.listView-meta.xml
<ListView>
    <fullName>BigMachines__Orphan_Quotes</fullName>
    <columns>NAME</columns>
    <columns>BigMachines__Status__c</columns>
    <columns>BigMachines__Description__c</columns>
    <columns>BigMachines__Account__c</columns>
    <columns>BigMachines__Total_Amount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BigMachines__Opportunity__c</field>
        <operation>equals</operation>
    </filters>
    <label>Orphan Quotes</label>
    <language>en_US</language>
</ListView>